[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minigrid-rl-reductions"
version = "0.1.0"
description = "SB3-style RL training (PPO, A2C, DQN, QRDQN) for MiniGrid + MDP reduction utilities (bisimulation/homomorphisms)."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "gymnasium>=0.29",
  "minigrid>=2.3.0",
  "tqdm>=4.66",
  "matplotlib>=3.7.0",
  "opencv-python>=4.8.0",
  "pillow>=10.0.0",
  "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6.0", "black>=24.0.0"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
